--- a/src/app/features/kik0004/clusters.component.css
+++ b/src/app/features/kik0004/clusters.component.css
@@ -1,21 +1,25 @@
+/* General */
+.clusters {
+}
+
 /* Menu */
-.menu {
+.clusters .menu {
   position: absolute;
   margin: 10px;
   z-index: 9999;
 }
 
-.menu.left {
+.clusters .menu.left {
   top: -40px;
   left: 0;
 }
 
-.menu.right {
+.clusters .menu.right {
   top: -40px;
   right: 0;
 }
 
-.menu > i {
+.clusters .menu > i {
   opacity: 0.7;
   font-size: 18px;
   padding-left: 5px;
@@ -24,12 +28,12 @@
 }
 
 /* Custom */
-.vis-time-axis .vis-grid.vis-saturday,
-.vis-time-axis .vis-grid.vis-sunday {
+.clusters .vis-time-axis .vis-grid.vis-saturday,
+.clusters .vis-time-axis .vis-grid.vis-sunday {
   background: lightcyan;
 }
 
-.vis-item {
+.clusters .vis-item {
   border-color: #97b0f8;
   background-color: white;
   box-shadow: 0px 2px 4px 0px lightgray;
